--- a/pom.xml
+++ b/pom.xml
@@ -1,258 +1,263 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!-- $Id$ -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.geronimo.gbuild</groupId>
-  <artifactId>gbuild-parent</artifactId>
-  <packaging>pom</packaging>
-  <name>GBuild Parent Project</name>
-  <version>1.0-SNAPSHOT</version>
-  
-  <issueManagement>
-    <system>jira</system>
-    <url>http://issues.apache.org/jira/browse/GERONIMO</url>
-  </issueManagement>
-  
-  <ciManagement>
-    <system>continuum</system>
-    <url>http://ci.gbuild.org/continuum</url>
-    <notifiers>
-      <notifier>
-        <configuration>
-          <address>scm@geronimo.apache.org</address>
-        </configuration>
-      </notifier>
-    </notifiers>
-  </ciManagement>
-  
-  <inceptionYear>2005</inceptionYear>
-  
-  <mailingLists>
-    <mailingList>
-      <name>GBuild Dev List</name>
-      <subscribe>dev-subscribe@geronimo.apache.org</subscribe>
-      <unsubscribe>dev-unsubscribe@geronimo.apache.org</unsubscribe>
-      <archive>http://mail-archives.apache.org/mod_mbox/geronimo-dev/</archive>
-    </mailingList>
-    <mailingList>
-      <name>GBuild User List</name>
-      <subscribe>users-subscribe@geronimo.apache.org</subscribe>
-      <unsubscribe>users-unsubscribe@geronimo.apache.org</unsubscribe>
-      <archive>http://mail-archives.apache.org/mod_mbox/geronimo-users/</archive>
-    </mailingList>
-    <mailingList>
-      <name>Apache Announce List</name>
-      <subscribe>announce-subscribe@apache.org</subscribe>
-      <unsubscribe>announce-unsubscribe@apache.org</unsubscribe>
-      <post>announce@apache.org</post>
-      <archive>mail-archives.apache.org/mod_mbox/www-announce/</archive>
-    </mailingList>
-  </mailingLists>
-  
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  
-  <developers>
-    <developer>
-      <id>dblevins</id>
-      <name>David Blevins</name>
-      <email>dblevins@apache.org</email>
-      <organization>Geronimo</organization>
-      <roles>
-        <role>Java Developer</role>
-        <role>PMC Member</role>
-      </roles>
-      <timezone>-8</timezone>
-    </developer>
-    <developer>
-      <id>dain</id>
-      <name>Dain Sundstrom</name>
-      <email>dain@apache.org</email>
-      <organization>Geronimo</organization>
-      <roles>
-        <role>Java Developer</role>
-        <role>PMC Member</role>
-      </roles>
-      <timezone>-8</timezone>
-    </developer>
-  </developers>
-  
-  <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</connection>
-    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/geronimo/gbuild/trunk/</url>
-  </scm>
-  <organization>
-    <name>Apache</name>
-    <url>http://www.apache.org/</url>
-  </organization>
-  
-  <build>
-    <defaultGoal>install</defaultGoal>
-    
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.4</source>
-          <target>1.4</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.plexus</groupId>
-        <artifactId>plexus-maven-plugin</artifactId>
-        <version>1.1</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>descriptor</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-    
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.codehaus.plexus</groupId>
-          <artifactId>plexus-maven-plugin</artifactId>
-          <version>1.1.1</version>
-          <extensions>true</extensions>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.1.3</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  
-  <modules>
-    <module>gbuild-agent</module>
-    <module>gbuild-agent-web</module>
-    <module>gbuild-report</module>
-    <module>gbuild-agent-application</module>
-  </modules>
-  
-  <repositories>
-    <repository>
-      <id>apache</id>
-      <name>Apche Repository</name>
-      <url>http://cvs.apache.org/repository</url>
-      <layout>legacy</layout>
-    </repository>
-    <repository>
-      <id>dblevins</id>
-      <name>Apche Repository</name>
-      <url>http://people.apache.org/~dblevins/maven</url>
-      <layout>legacy</layout>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <id>snapshots</id>
-      <name>Maven Snapshot Development Repository</name>
-      <url>http://snapshots.maven.codehaus.org/maven2</url>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <id>snapshots</id>
-      <name>Maven Central Plugins Development Repository</name>
-      <url>http://snapshots.maven.codehaus.org/maven2</url>
-    </pluginRepository>
-  </pluginRepositories>
-  
-  <dependencyManagement>
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.apache.geronimo.gbuild</groupId>
+    <artifactId>gbuild-parent</artifactId>
+    <packaging>pom</packaging>
+    <name>GBuild Parent Project</name>
+    <version>1.0-SNAPSHOT</version>
+
+    <issueManagement>
+        <system>jira</system>
+        <url>http://issues.apache.org/jira/browse/GERONIMO</url>
+    </issueManagement>
+
+    <ciManagement>
+        <system>continuum</system>
+        <url>http://ci.gbuild.org/continuum</url>
+        <notifiers>
+            <notifier>
+                <configuration>
+                    <address>scm@geronimo.apache.org</address>
+                </configuration>
+            </notifier>
+        </notifiers>
+    </ciManagement>
+
+    <inceptionYear>2005</inceptionYear>
+
+    <mailingLists>
+        <mailingList>
+            <name>GBuild Dev List</name>
+            <subscribe>dev-subscribe@geronimo.apache.org</subscribe>
+            <unsubscribe>dev-unsubscribe@geronimo.apache.org</unsubscribe>
+            <archive>http://mail-archives.apache.org/mod_mbox/geronimo-dev/</archive>
+        </mailingList>
+        <mailingList>
+            <name>GBuild User List</name>
+            <subscribe>users-subscribe@geronimo.apache.org</subscribe>
+            <unsubscribe>users-unsubscribe@geronimo.apache.org</unsubscribe>
+            <archive>http://mail-archives.apache.org/mod_mbox/geronimo-users/</archive>
+        </mailingList>
+        <mailingList>
+            <name>Apache Announce List</name>
+            <subscribe>announce-subscribe@apache.org</subscribe>
+            <unsubscribe>announce-unsubscribe@apache.org</unsubscribe>
+            <post>announce@apache.org</post>
+            <archive>mail-archives.apache.org/mod_mbox/www-announce/</archive>
+        </mailingList>
+    </mailingLists>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>dblevins</id>
+            <name>David Blevins</name>
+            <email>dblevins@apache.org</email>
+            <organization>Geronimo</organization>
+            <roles>
+                <role>Java Developer</role>
+                <role>PMC Member</role>
+            </roles>
+            <timezone>-8</timezone>
+        </developer>
+        <developer>
+            <id>dain</id>
+            <name>Dain Sundstrom</name>
+            <email>dain@apache.org</email>
+            <organization>Geronimo</organization>
+            <roles>
+                <role>Java Developer</role>
+                <role>PMC Member</role>
+            </roles>
+            <timezone>-8</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</connection>
+        <developerConnection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
+        <url>http://svn.apache.org/viewcvs.cgi/geronimo/gbuild/trunk/</url>
+    </scm>
+    <organization>
+        <name>Apache</name>
+        <url>http://www.apache.org/</url>
+    </organization>
+
+    <build>
+        <defaultGoal>install</defaultGoal>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.4</source>
+                    <target>1.4</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-maven-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-maven-plugin</artifactId>
+                    <version>1.1.1</version>
+                    <extensions>true</extensions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.1.3</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <modules>
+        <module>gbuild-agent</module>
+        <module>gbuild-agent-web</module>
+        <module>gbuild-report</module>
+        <module>gbuild-agent-application</module>
+    </modules>
+
+    <repositories>
+        <repository>
+            <id>apache</id>
+            <name>Apche Repository</name>
+            <url>http://cvs.apache.org/repository</url>
+            <layout>legacy</layout>
+        </repository>
+        <repository>
+            <id>dblevins</id>
+            <name>Apche Repository</name>
+            <url>http://people.apache.org/~dblevins/maven</url>
+            <layout>legacy</layout>
+        </repository>
+        <repository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <id>snapshots</id>
+            <name>Maven Snapshot Development Repository</name>
+            <url>http://snapshots.maven.codehaus.org/maven2</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <id>snapshots</id>
+            <name>Maven Central Plugins Development Repository</name>
+            <url>http://snapshots.maven.codehaus.org/maven2</url>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.8</version>
+            </dependency>
+            <dependency>
+                <groupId>concurrent</groupId>
+                <artifactId>concurrent</artifactId>
+                <version>1.3.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.continuum</groupId>
+                <artifactId>continuum-api</artifactId>
+                <version>1.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.continuum</groupId>
+                <artifactId>continuum-core</artifactId>
+                <version>1.0.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.transaction</groupId>
+                        <artifactId>jta</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.resource</groupId>
+                        <artifactId>connector</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.continuum</groupId>
+                <artifactId>continuum-model</artifactId>
+                <version>1.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-command-line</artifactId>
+                <version>1.0-alpha-2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.scm</groupId>
+                <artifactId>maven-scm-provider-cvs</artifactId>
+                <version>1.0-beta-2</version>
+            </dependency>
+            <dependency>
+                <groupId>incubator-activemq</groupId>
+                <artifactId>activemq-core</artifactId>
+                <version>4.0-M4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-jms_1.1_spec</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-servlet_2.4_spec</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>3.8.1</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.8</version>
-      </dependency>
-      <dependency>
-        <groupId>concurrent</groupId>
-        <artifactId>concurrent</artifactId>
-        <version>1.3.4</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.continuum</groupId>
-        <artifactId>continuum-api</artifactId>
-        <version>1.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.continuum</groupId>
-        <artifactId>continuum-core</artifactId>
-        <version>1.0.2</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>javax.resource</groupId>
-            <artifactId>connector</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.continuum</groupId>
-        <artifactId>continuum-model</artifactId>
-        <version>1.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.plexus</groupId>
-        <artifactId>plexus-command-line</artifactId>
-        <version>1.0-alpha-2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.maven.scm</groupId>
-        <artifactId>maven-scm-provider-cvs</artifactId>
-        <version>1.0-beta-2</version>
-      </dependency>
-      <dependency>
-        <groupId>incubator-activemq</groupId>
-        <artifactId>activemq-core</artifactId>
-        <version>4.0-M4</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-jms_1.1_spec</artifactId>
-        <version>1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
-        <version>1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-servlet_2.4_spec</artifactId>
-        <version>1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>3.8.1</version>
-        <scope>test</scope>
-      </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
-  </dependencyManagement>
-  
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-  </dependencies>
-  
+
 </project>
