--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -1,72 +1,75 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!-- $Id$ -->
+
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <artifactId>gbuild-parent</artifactId>
-    <groupId>org.apache.geronimo.gbuild</groupId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  
-  
-  <artifactId>gbuild-agent</artifactId>
-  <name>GBuild Agent</name>
-  <packaging>jar</packaging>
-  <url>http://geronimo.apache.org</url>
-  
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.maven.continuum</groupId>
-      <artifactId>continuum-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.continuum</groupId>
-      <artifactId>continuum-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.continuum</groupId>
-      <artifactId>continuum-model</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-command-line</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.scm</groupId>
-      <artifactId>maven-scm-provider-cvs</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jms_1.1_spec</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
-    </dependency>
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>gbuild-parent</artifactId>
+        <groupId>org.apache.geronimo.gbuild</groupId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>gbuild-agent</artifactId>
+    <name>GBuild Agent</name>
+    <packaging>jar</packaging>
+    <url>http://geronimo.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.maven.continuum</groupId>
+            <artifactId>continuum-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.continuum</groupId>
+            <artifactId>continuum-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.continuum</groupId>
+            <artifactId>continuum-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-command-line</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.scm</groupId>
+            <artifactId>maven-scm-provider-cvs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jms_1.1_spec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
+        </dependency>
     
     <!-- ActiveMQ deps -->
-    <dependency>
-      <groupId>incubator-activemq</groupId>
-      <artifactId>activemq-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>backport-util-concurrent</groupId>
-      <artifactId>backport-util-concurrent</artifactId>
-      <version>2.0_01_pd</version>
-    </dependency>
-    <dependency>
-      <groupId>activeio</groupId>
-      <artifactId>activeio</artifactId>
-      <version>2.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derby</artifactId>
-      <version>10.1.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>concurrent</groupId>
-      <artifactId>concurrent</artifactId>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>incubator-activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>backport-util-concurrent</groupId>
+            <artifactId>backport-util-concurrent</artifactId>
+            <version>2.0_01_pd</version>
+        </dependency>
+        <dependency>
+            <groupId>activeio</groupId>
+            <artifactId>activeio</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>concurrent</groupId>
+            <artifactId>concurrent</artifactId>
+        </dependency>
+    </dependencies>
 </project>
