--- a/gbuild-report/pom.xml
+++ b/gbuild-report/pom.xml
@@ -1,48 +1,52 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!-- $Id$ -->
+
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <artifactId>gbuild-parent</artifactId>
-    <groupId>org.apache.geronimo.gbuild</groupId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  
-  <artifactId>gbuild-report</artifactId>
-  <name>GBuild Report</name>
-  <packaging>jar</packaging>
-  <url>http://geronimo.apache.org</url>
-  
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <mkdir dir="${basedir}/target/classes/META-INF/org/apache/geronimo/gbuild/report"/>
-                <zip destfile="${basedir}/target/classes/META-INF/org/apache/geronimo/gbuild/report/resources.zip">
-                  <fileset dir="${basedir}/src/main/report-resources"/>
-                </zip>
-              </tasks>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  
-  <dependencies>
-    <dependency>
-      <groupId>velocity</groupId>
-      <artifactId>velocity</artifactId>
-      <version>1.4</version>
-    </dependency>
-  </dependencies>
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>gbuild-parent</artifactId>
+        <groupId>org.apache.geronimo.gbuild</groupId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>gbuild-report</artifactId>
+    <name>GBuild Report</name>
+    <packaging>jar</packaging>
+    <url>http://geronimo.apache.org</url>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <mkdir dir="${basedir}/target/classes/META-INF/org/apache/geronimo/gbuild/report"/>
+                                <zip destfile="${basedir}/target/classes/META-INF/org/apache/geronimo/gbuild/report/resources.zip">
+                                    <fileset dir="${basedir}/src/main/report-resources"/>
+                                </zip>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.4</version>
+        </dependency>
+    </dependencies>
 </project>
