Update dependencies to released version
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@395367 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-rpc-client/pom.xml
+++ b/continuum-rpc-client/pom.xml
@@ -38,7 +38,7 @@
       <plugin>
         <groupId>org.codehaus.modello</groupId>
         <artifactId>modello-maven-plugin</artifactId>
-        <version>1.0-alpha-9-SNAPSHOT</version>
+        <version>1.0-alpha-9</version>
         <executions>
           <execution>
             <goals>
