--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -13,7 +13,7 @@
       <plugin>
         <groupId>org.codehaus.modello</groupId>
         <artifactId>modello-maven-plugin</artifactId>
-        <version>1.0-alpha-9-SNAPSHOT</version>
+        <version>1.0-alpha-9</version>
         <executions>
           <execution>
             <goals>
@@ -31,7 +31,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jpox-maven-plugin</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
         <executions>
           <execution>
             <goals>
