--- a/continuum-notifiers/continuum-notifier-jabber/pom.xml
+++ b/continuum-notifiers/continuum-notifier-jabber/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-jabber</artifactId>
-      <version>1.0-alpha-4-SNAPSHOT</version>
+      <version>1.0-alpha-4</version>
     </dependency>
   </dependencies>
 </project>
