--- a/continuum-web/pom.xml
+++ b/continuum-web/pom.xml
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-summit</artifactId>
-      <version>1.0-beta-9-SNAPSHOT</version>
+      <version>1.0-beta-9</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
